# ariel-os

./: .gitignore  Cargo.toml  ariel-os-cargo.toml  build_log.txt
boards/: xteink-x4.yaml
examples/: laze.yml
examples/eink-hello/: Cargo.toml  laze.yml
examples/eink-hello/src/: main.rs  pins.rs  ssd1677.rs
examples/x4-launcher/: Cargo.toml  laze.yml
examples/x4-launcher/src/: epub.rs  main.rs  pins.rs  sd.rs  ssd1677.rs  ui.rs
src/ariel-os-boards/: build.rs  laze.yml
src/ariel-os-boards/src/: lib.rs  xteink-x4.rs
src/ariel-os-embassy/: Cargo.toml
src/ariel-os-esp/: Cargo.toml
src/ariel-os-esp/src/: wifi.rs
src/ariel-os-esp/src/wifi/: esp_wifi.rs
src/ariel-os-hal/: Cargo.toml
src/ariel-os-nrf/: Cargo.toml
src/ariel-os-rp/: Cargo.toml
src/ariel-os-stm32/: Cargo.toml
